PRMT-1631 [JN/KV] Fix focus and alignment on logo

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -13,3 +13,14 @@
 .app-homepage.nhsuk-main-wrapper {
   padding-top: 0;
 }
+
+.nhsuk-header__container {
+  padding-left: 0;
+
+  .gp2gp-header__link {
+    @include mq($until: tablet) {
+      display: block;
+    }
+  }
+}
+
